weekend ending commit
